--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "connect-typeorm": "^2.0.0",
     "express-session": "^1.17.3",
     "mysql2": "^3.5.2",
+    "nanoid": "^4.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.6",
