--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.9",
+    "@mui/icons-material": "^5.14.3",
     "@mui/system": "^5.14.3",
+    "@tanstack/react-query": "^4.32.5",
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
