Use sed to fix path in emscripten build

--- a/frontend/native/CMakeLists.txt
+++ b/frontend/native/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.11)
 project(glissandostems)
 
+option(GS_WASM_PATH_PREFIX DEFAULT "")
+
 set(EXECUTABLE_NAME glissando-editor)
 set(CMAKE_CXX_STANDARD 14)
 
@@ -19,3 +21,8 @@ target_compile_options(${EXECUTABLE_NAME} PRIVATE -pthread -O3)
 target_link_options(${EXECUTABLE_NAME} PRIVATE 
     ${GS_OPTIMIZATION_LEVEL} -sMODULARIZE=0 -sWASM=1 -sPTHREAD_POOL_SIZE=navigator.hardwareConcurrency 
     -sEXPORT_ES6=0 -sENVIRONMENT=web,worker -sAUDIO_WORKLET=1 -sWASM_WORKERS=1 -sEXPORTED_RUNTIME_METHODS=wasmTable -o /native/build/glissando-editor.js)
+
+string(REPLACE "/" "\\/" GS_WASM_PATH_PREFIX ${GS_WASM_PATH_PREFIX})
+
+add_custom_command(TARGET ${EXECUTABLE_NAME} POST_BUILD 
+    COMMAND sed -i'' "\"s/\\([\\(]['\\\"]\\)\\(glissando-editor\\.\\)/\\1${GS_WASM_PATH_PREFIX}\\2/\"" ${CMAKE_BINARY_DIR}/glissando-editor.js)
