--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
+    "@simbathesailor/use-what-changed": "^2.0.0",
     "@types/emscripten": "^1.39.7",
     "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.2.15",
