Implement vorbis decoding

--- a/frontend/native/CMakeLists.txt
+++ b/frontend/native/CMakeLists.txt
@@ -23,8 +23,9 @@ target_compile_options(${EXECUTABLE_NAME} PRIVATE -pthread -O3)
 target_link_libraries(${EXECUTABLE_NAME} PRIVATE embind)
 target_link_options(${EXECUTABLE_NAME} PRIVATE 
     ${GS_OPTIMIZATION_LEVEL} -sMODULARIZE=0 -sWASM=1 -sPTHREAD_POOL_SIZE=navigator.hardwareConcurrency 
-    -sEXPORT_ES6=0 -sENVIRONMENT=web,worker -sAUDIO_WORKLET=1 -sWASM_WORKERS=1 ${GS_ASSERTIONS}
-    -sEXPORTED_RUNTIME_METHODS=wasmTable -pthread -o /native/build/glissando-editor.js)
+    -sEXPORT_ES6=0 -sENVIRONMENT=web,worker -sAUDIO_WORKLET=1 -sWASM_WORKERS=1 -sFETCH=1
+    -sALLOW_MEMORY_GROWTH=1 -sTOTAL_MEMORY=2147483648
+    ${GS_ASSERTIONS} -sEXPORTED_RUNTIME_METHODS=wasmTable -pthread -o /native/build/glissando-editor.js)
 
 string(REPLACE "/" "\\/" GS_WASM_PATH_PREFIX ${GS_WASM_PATH_PREFIX})
 
