--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2"
   },
