--- a/backend/package.json
+++ b/backend/package.json
@@ -24,12 +24,14 @@
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^3.0.3",
     "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "connect-typeorm": "^2.0.0",
     "express-session": "^1.17.3",
+    "mime-types": "^2.1.35",
     "mysql2": "^3.5.2",
     "nanoid": "^3.3.4",
     "reflect-metadata": "^0.1.13",
@@ -45,6 +47,8 @@
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
     "@types/jest": "^29.5.2",
+    "@types/mime-types": "^2.1.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
