--- a/frontend/native/CMakeLists.txt
+++ b/frontend/native/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.11)
+cmake_minimum_required(VERSION 3.13)
 project(glissandostems)
 
 option(GS_WASM_PATH_PREFIX DEFAULT "")
@@ -22,10 +22,15 @@ target_include_directories(${EXECUTABLE_NAME} PUBLIC include)
 target_compile_options(${EXECUTABLE_NAME} PRIVATE -pthread -O3 -Wall -Wextra)
 target_link_libraries(${EXECUTABLE_NAME} PRIVATE embind)
 target_link_options(${EXECUTABLE_NAME} PRIVATE 
-    ${GS_OPTIMIZATION_LEVEL} -sMODULARIZE=0 -sWASM=1 -sPTHREAD_POOL_SIZE=navigator.hardwareConcurrency 
+    ${GS_OPTIMIZATION_LEVEL} -sMODULARIZE=0 -sWASM=1 -sPTHREAD_POOL_SIZE=32
     -sEXPORT_ES6=0 -sENVIRONMENT=web,worker -sAUDIO_WORKLET=1 -sWASM_WORKERS=1 -sFETCH=1
-    -sALLOW_MEMORY_GROWTH=1 -sTOTAL_MEMORY=2147483648
+    -sTOTAL_MEMORY=2GB -sSTACK_SIZE=1MB
     ${GS_ASSERTIONS} -sEXPORTED_RUNTIME_METHODS=wasmTable -pthread -o /native/build/glissando-editor.js)
+
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    target_compile_options(${EXECUTABLE_NAME} PRIVATE -fsanitize=undefined)
+    target_link_options(${EXECUTABLE_NAME} PRIVATE -fsanitize=undefined)
+endif()
 
 # Dependencies
 add_subdirectory(lib)
