Implement prev/next transport buttons

--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,4 +1,4 @@
 FROM node:18-alpine3.18
 
 WORKDIR /usr/src/app
-CMD [ "npm", "run", "dev", "--", "--host", "0.0.0.0" ]
+CMD [ "/bin/sh", "-c", "npm install; npm run dev -- --host 0.0.0.0" ]
