--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -4,4 +4,4 @@ RUN apk update && \
     apk add sox
 
 WORKDIR /usr/src/app
-CMD [ "npm", "run", "start:dev" ]
+CMD [ "/bin/sh", "-c", "npm install; npm run start:dev" ]
