Start writing S3 storage driver module

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,10 @@
 STEM_URL_PREFIX=/stems
 STEM_SAVE_FOLDER=./public_dev/stems
 DATABASE_HOST=mariadb
+S3_DRIVER_ENABLED=true
+S3_ACCESS_KEY_ID=glissandostems
+S3_SECRET_ACCESS_KEY=glissandostems
+S3_ENDPOINT_URL=http://minio-s3:9000/
+S3_BUCKET_NAME=glissandostems
+S3_CREATE_BUCKET_ON_START=true
+S3_FORCE_PATH_STYLE=true
