Finish S3 driver implementation

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-STEM_URL_PREFIX=/stems
+STEM_URL_PREFIX=http://127.0.0.1:9000/glissandostems
 STEM_SAVE_FOLDER=./public_dev/stems
 DATABASE_HOST=mariadb
 S3_DRIVER_ENABLED=true
