Prepare for deployment - set up migrations

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,10 @@
+# This env file is for development only
+# Replace it when running on production
+
 STEM_URL_PREFIX=http://127.0.0.1:9000/glissandostems
 STEM_SAVE_FOLDER=./public_dev/stems
 DATABASE_HOST=mariadb
+DATABASE_NAME=glissandostems
 S3_DRIVER_ENABLED=true
 S3_ACCESS_KEY_ID=glissandostems
 S3_SECRET_ACCESS_KEY=glissandostems
