--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:generate": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate -d typeorm-dev-datasource.ts ./migrations/migration",
+    "migration:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d typeorm-dev-datasource.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.414.0",
@@ -34,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "connect-typeorm": "^2.0.0",
+    "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
     "mime-types": "^2.1.35",
     "mysql2": "^3.6.1",
@@ -41,6 +45,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.6",
+    "ts-node": "^10.9.1",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
@@ -66,7 +71,6 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
-    "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   },
