--- a/backend/package.json
+++ b/backend/package.json
@@ -11,16 +11,16 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migration:generate": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate -d typeorm-dev-datasource.ts ./migrations/migration",
-    "migration:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d typeorm-dev-datasource.ts"
+    "migration:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d typeorm-dev-datasource.ts",
+    "migration:run:prod": "typeorm migration:run -d typeorm-prod-datasource.cjs"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.414.0",
@@ -45,7 +45,6 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.6",
-    "ts-node": "^10.9.1",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
@@ -69,9 +68,10 @@
     "prettier": "^2.8.8",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
+    "tsconfig-paths": "^4.2.0",
+    "ts-node": "^10.9.1",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   },
   "jest": {
