--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -1,5 +1,7 @@
 name: Build and deploy Glissando Stems
 on: [push]
+env:
+  REGISTRY: ghcr.io
 jobs:
   build-backend:
     runs-on: ubuntu-latest
@@ -26,6 +28,7 @@ jobs:
         with:
           name: backend-dist
           path: ./backend/dist/
+          retention-days: 3
 
   build-frontend:
     runs-on: ubuntu-latest
@@ -52,6 +55,7 @@ jobs:
         with:
           name: frontend-dist
           path: ./frontend/dist/
+          retention-days: 3
 
   build-emscripten:
     runs-on: ubuntu-latest
@@ -89,4 +93,48 @@ jobs:
         with:
           name: native-dist
           path: ./frontend/native/dist/
-      
+          retention-days: 3
+    
+  deploy-backend:
+    #if: github.ref == 'refs/heads/master'
+    needs: [build-backend]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    defaults:
+      run:
+        working-directory: ./backend
+    env:
+      IMAGE_NAME: swiszczoo/glissando-backend
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: backend-dist
+          path: ./backend/dist/
+
+      - name: Docker login
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Docker build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+        
