--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -99,7 +99,7 @@ jobs:
           retention-days: 3
     
   deploy-backend:
-    #if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
     name: Deploy backend container to GHCR
     needs: [build-backend, build-frontend, build-emscripten]
     runs-on: ubuntu-latest
@@ -143,7 +143,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
       
   deploy-proxy:
-    #if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
     name: Deploy proxy container to GHCR
     needs: [build-backend, build-frontend, build-emscripten]
     runs-on: ubuntu-latest
@@ -193,16 +193,16 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
   
   clean-ghcr:
-    #if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
     needs: [deploy-backend, deploy-proxy]
     name: Delete old unused container images
     runs-on: ubuntu-latest
     steps:
-      - name: Clean up backend images
+      - name: Clean up old images
         uses: snok/container-retention-policy@v2
         with:
           image-names: glissando-*
-          cut-off: 1 hour ago UTC
+          cut-off: 1 minute ago UTC
           timestamp-to-use: updated_at
           account-type: personal
           keep-at-least: 1
