--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -133,6 +133,8 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/master' }}
 
       - name: Docker build and push
         uses: docker/build-push-action@v5
@@ -207,7 +209,7 @@ jobs:
           cut-off: 1 minute ago UTC
           timestamp-to-use: updated_at
           account-type: personal
-          keep-at-least: 1
+          keep-at-least: 0
           skip-tags: latest
           token: ${{ secrets.PAT }}
 
