Limit output gain, add timestamps to bypass cache Additionally test auto-deploy...

--- a/backend/.env
+++ b/backend/.env
@@ -5,6 +5,7 @@ STEM_URL_PREFIX=http://127.0.0.1:9000/glissandostems
 STEM_SAVE_FOLDER=./public_dev/stems
 DATABASE_HOST=mariadb
 DATABASE_NAME=glissandostems
+DATABASE_SYNC=true
 S3_DRIVER_ENABLED=true
 S3_ACCESS_KEY_ID=glissandostems
 S3_SECRET_ACCESS_KEY=glissandostems
